Fixed spacing on headers to the 30px/60px rule

--- a/src/static/css/module/helpers.less
+++ b/src/static/css/module/helpers.less
@@ -31,6 +31,7 @@ object {
 .lead {
   .webfont-regular();
   font-size: 1.125em;
+  margin-bottom: 30px;
 }
 
 /* mid-leads use a medium font weight over size */
